# taskweb

./: README.md  pyproject.toml  tasks.py
static/: style.css
taskserve/: app.py  utils.py
taskserve/static/: style.css
